# estructura-de-datos-aerolinea

./: .env  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Values.yaml  description-questions-project.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  enunciado.txt  package-lock.json  package.json  program-copy.js  program.js  propuesta-arquitectonica.md  requirements.txt
.claude/: mcp.json
.claude/skills/: ai-tool.md  cleanup-worktrees.md  docker-ops.md  finish-user-story.md  git-workflow.md  new-celery-task.md  new-endpoint.md  new-feature.md  resolve-parallel-conflicts.md  run-tests.md  start-user-story.md  update-sprint-tracker.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  edac8bdebda8_add_users_table.py
backend/src/: main.py
backend/src/api/v1/: ai.py  auth.py  bookings.py  flights.py  stats.py
backend/src/features/ai/: agent.py  tools.py
backend/src/features/auth/: commands.py  jwt.py  models.py  queries.py  schemas.py
backend/src/features/bookings/: commands.py  event_log.py  event_logger.py  queries.py
backend/src/features/flights/: commands.py  models.py
backend/src/features/stats/: queries.py  schemas.py
backend/src/shared/: correlation_middleware.py  embeddings.py  exceptions.py  logging_config.py  metrics.py  middleware.py  tracing.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/: test_integration.py
backend/tests/unit/: conftest.py  test_auth.py  test_bookings_commands.py  test_bookings_queries.py  test_flights_commands.py  test_flights_queries.py  test_schemas.py
evaluacion-tecnica/: cronograma-scrum.md  cronograma-sprints.md  cronograma-transformacion.md  evaluacion-proyecto.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
schelude/: advanced02.md  advanced04.md  advanced05.md  advanced06.md  avance01.md  avance03.md  cronograma.md
scripts/: deploy.sh  healthcheck.sh  validate-kustomize.sh
src/: main.py
tests/: test_integration.py
(+97 files in other folders)
